--- a/pages/earth.html
+++ b/pages/earth.html
@@ -65,7 +65,7 @@
                     <a href="#FormationAndDevelopment">Formation and development</a>
                 </li>
                 <li>
-                    <a href="#FormationOfLife">Formation of life</a>
+                    <a href="#FormationOfLifeTheories">Formation of life theories</a>
                     <ul class="subtoc">
                         <li>
                             <a href="#SpontaneousSpawning">Spontaneous spawning</a>
@@ -75,6 +75,16 @@
                         </li>
                         <li>
                             <a href="#PrimordialSoup">Primordial soup</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#EvolutionOfLife">Evolution of life</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
                         </li>
                     </ul>
                 </li>
@@ -131,29 +141,84 @@
                 Earth's surface gradually cooled and a solid crust formed. 
                 Ice was brought by comets and other object, which turned into oceans by the volcanic activity.
             </p>
+            <h2 class="paragraphheader" id="FormationOfLifeTheories">Formation of life theories</h2>
             <p class="paragraph">
-            <h2 class="paragraphheader" id="FormationOfLife">Formation of life</h2>
                 Between four and three and a half billion years ago the first life forms appeared.
                 Multiple theories exist on how life on Earth formed.
             </p>
-                <h3 class="paragraphsubheader" id="SpontaneousSpawning">Spontaneous spawning</h3>
-                <p class="paragraph">
-                    Spontaneous spawning is an ancient theory, first mentioned by Aristotle.
-                    According to him, lower life forms formed from decaying organic matter.
-                    In 1668 Francesco Redi conducted an experiment, in which meat was left rotting, to see if maggots appeared, but none did, disproving the theory.
-                </p>
-                <h3 class="paragraphsubheader" id="Panspermia">Panspermia</h3>
-                <p class="paragraph">
-                    Another ancient theory dates back to Anaxagoras in the 5th century BC.
-                    It states that life exist throughout the universe and was brought to Earth by comets and asteroids.
-                    This theory does not mention how life formed, only the method it was carried to Earth.
-                </p>
-                <h3 class="paragraphsubheader" id="PrimordialSoup">Primordial soup</h3>
-                <p class="paragraph">
-                    In 19th century several people proposed that life might have formed from inorganic compounds.
-                    In 1924 Alexander Oparin and later in 1929 J. B. S. Haldane stated that the molecules constituting cells slowly self-organised from a so-called "primordial soup".
-                    Chemists Stanley Miller and Harold Urey successfuly simulated such conditions in 1952.
-                </p>
+            <h3 class="paragraphsubheader" id="SpontaneousSpawning">Spontaneous spawning</h3>
+            <p class="paragraph">
+                Spontaneous spawning is an ancient theory, first mentioned by Aristotle.
+                According to him, lower life forms formed from decaying organic matter.
+                In 1668 Francesco Redi conducted an experiment, in which meat was left rotting, to see if maggots appeared, but none did, disproving the theory.
+            </p>
+            <h3 class="paragraphsubheader" id="Panspermia">Panspermia</h3>
+            <p class="paragraph">
+                Another ancient theory dates back to Anaxagoras in the 5th century BC.
+                It states that life exist throughout the universe and was brought to Earth by comets and asteroids.
+                This theory does not mention how life formed, only the method it was carried to Earth.
+            </p>
+            <h3 class="paragraphsubheader" id="PrimordialSoup">Primordial soup</h3>
+            <p class="paragraph">
+                In 19th century several people proposed that life might have formed from inorganic compounds.
+                In 1924 Alexander Oparin and later in 1929 J. B. S. Haldane stated that the molecules constituting cells slowly self-organised from a so-called "primordial soup".
+                Chemists Stanley Miller and Harold Urey successfuly simulated such conditions in 1952.
+            </p>
+            <h2 class="paragraphheader" id="EvolutionOfLife">Evolution of life</h2>
+            <p class="paragraph">
+                Over the course of more than three billion years, life has evolved slowly, changing Earth's environment. 
+                Photosynthesizing life enriched the atmosphere with oxygen and multicellular organisms appeared. 
+                After the emergence of vertebrate organisms, fish quickly developed, and from them - the first amphibians evolved, which were the first to leave the oceans. 
+                There were many mass extinction, the most recent occuring 66 million years ago, when a massive asteroid wiped out most non-avian life and especially dinosaurs. 
+                Smaller mammals survived the impact and among those, apes gained abilities like upright standing and tool bearing. 
+                They are members of the class Homo, which evolved into the modern-day humans.
+            </p>
+            <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+            <h3 class="paragraphsubheader" id="Shape">Shape</h3>
+            <p class="paragraph">
+                Earth is a nearly spherical body with an average diameter of 12,742 km. 
+                This makes Earth the fifth biggest planet in the Solar System. 
+                Altitude on Earth is measured relatively to the sea level of 0 m. 
+                The lowest point is Challenger Deep - 10,925 m and the highest is mount Everest - 8,848 m. 
+                Due to Earth's rotation, the lands around the Equator are farther from the cener than the poles.
+            </p>
+            <h3 class="paragraphsubheader" id="Surface">Surface</h3>
+            <p class="paragraph">
+                Most of the water on Earth is in it's liquid phase. 
+                About 71.8% of Earth's surface is covered by ocean. 
+                The world ocean is divided into five smaller oceans - Pacific, Atlantic, Indian, Southern and Arctic ocean.
+                These oceans contain a continential shelf, mid-ocean ridges, mountains, volcanoes, trenches, canyons and plateaus.
+            </p>
+            <p class="paragraph">
+                The land takes up only 29.2% of the surface. 
+                It consists of four main landmasses and many smaller islands.
+                The landmasses - Afroeurasia, America, Antarctica and Australia make up the continents.
+                Just like the oceans, many landforms shape up the land surface - mountains, plateaus, plains, volcanoes and many more.
+            </p>
+            <h3 class="paragraphsubheader" id="Interior">Interior</h3>
+            <p class="paragraph">
+                The crust is the outermost geologic layer of Earth, separated from the mantle by the Mohorovičić discontinuity.
+                It is  divided into continental and oceanic depending on the surface. 
+                While the continental crust contains more low-density igneous rocks like granite, oceanic crust has more basalt.
+                Both are covered by a layer of sedimentray rocks, which are accumulated and compressed sediments.
+                Igneous and sedimentary rocks can change into metamorphic rocks through high pressure or temperatures.
+            </p>
+            <p class="paragraph">
+                The mantle is a dense layer of rock in the interior of the Earth.
+                It is divided into upper, consisting mostly of olivine and pyroxene and lower mantle, consisting of magnesium perovskite.
+            </p>
+            <p class="paragraph">
+                The innermost layer is the core of Earth. 
+                It is split into a liquid outer core and a solid inner core.
+                The core consists of iron and nickel and is responsible for the magnetosphere around Earth.
+            </p>
+            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+            <p class="paragraph">
+                The rotation period relative to the sun is 24 h, but relative to other stars is 23 hours, 56 minutes and 4 seconds.
+            </p>
+            <p class="paragraph">
+            </p>
+            
         </section>
 
         <!--A footer-->
