Finishing Earth page

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -63,30 +63,43 @@
             <ul class="toc">
                 <li>
                     <a href="#FormationAndDevelopment">Formation and development</a>
-                </li>
-                <li>
-                    <a href="#FormationOfLifeTheories">Formation of life theories</a>
                     <ul class="subtoc">
                         <li>
-                            <a href="#SpontaneousSpawning">Spontaneous spawning</a>
+                            <a href="#PrimordialEarth">Primordial Earth</a>
                         </li>
                         <li>
-                            <a href="#Panspermia">Panspermia</a>
+                            <a href="#FormationOfLifeTheories">Formation of life theories</a>
                         </li>
                         <li>
-                            <a href="#PrimordialSoup">Primordial soup</a>
+                            <a href="#EvolutionOfLife">Evolution of life</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#EvolutionOfLife">Evolution of life</a>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
                 </li>
                 <li>
                     <a href="#PhysicalCharacteristics">Physical characteristics</a>
                     <ul class="subtoc">
                         <li>
+                            <a href="#Shape">Shape</a>
+                        </li>
+                        <li>
+                            <a href="#Surface">Surface</a>
+                        </li>
+                        <li>
+                            <a href="#Interior">Interior</a>
+                        </li>
+                        <li>
+                            <a href="#Atmosphere">Atmosphere</a>
+                        </li>
+                        <li>
+                            <a href="#Hydrosphere">Hydrosphere</a>
                         </li>
                     </ul>
+                </li>
+                <li>
+                    <a href="#Moon">Moon</a>
                 </li>
             </ul>
         </aside>
@@ -132,6 +145,7 @@
                 </p>
             </div>
             <h2 class="paragraphheader" id="FormationAndDevelopment">Formation and development</h2>
+            <h3 class="paragraphsubheader" id="PrimordialEarth">Primordial Earth</h3>
             <p class="paragraph">
                 Like other planets in the Solar System, the oldest Earth material dates back to 4.5 billion years.
                 It is believed that Earth was formed by a protoplanetary disc collapsing.
@@ -141,30 +155,27 @@
                 Earth's surface gradually cooled and a solid crust formed. 
                 Ice was brought by comets and other object, which turned into oceans by the volcanic activity.
             </p>
-            <h2 class="paragraphheader" id="FormationOfLifeTheories">Formation of life theories</h2>
+            <h3 class="paragraphsubheader" id="FormationOfLifeTheories">Formation of life theories</h3>
             <p class="paragraph">
                 Between four and three and a half billion years ago the first life forms appeared.
                 Multiple theories exist on how life on Earth formed.
             </p>
-            <h3 class="paragraphsubheader" id="SpontaneousSpawning">Spontaneous spawning</h3>
             <p class="paragraph">
                 Spontaneous spawning is an ancient theory, first mentioned by Aristotle.
                 According to him, lower life forms formed from decaying organic matter.
                 In 1668 Francesco Redi conducted an experiment, in which meat was left rotting, to see if maggots appeared, but none did, disproving the theory.
             </p>
-            <h3 class="paragraphsubheader" id="Panspermia">Panspermia</h3>
             <p class="paragraph">
-                Another ancient theory dates back to Anaxagoras in the 5th century BC.
+                Another ancient theory dates back to Anaxagoras in the 5th century BC - Panspermia.
                 It states that life exist throughout the universe and was brought to Earth by comets and asteroids.
                 This theory does not mention how life formed, only the method it was carried to Earth.
             </p>
-            <h3 class="paragraphsubheader" id="PrimordialSoup">Primordial soup</h3>
             <p class="paragraph">
                 In 19th century several people proposed that life might have formed from inorganic compounds.
                 In 1924 Alexander Oparin and later in 1929 J. B. S. Haldane stated that the molecules constituting cells slowly self-organised from a so-called "primordial soup".
                 Chemists Stanley Miller and Harold Urey successfuly simulated such conditions in 1952.
             </p>
-            <h2 class="paragraphheader" id="EvolutionOfLife">Evolution of life</h2>
+            <h3 class="paragraphsubheader" id="EvolutionOfLife">Evolution of life</h3>
             <p class="paragraph">
                 Over the course of more than three billion years, life has evolved slowly, changing Earth's environment. 
                 Photosynthesizing life enriched the atmosphere with oxygen and multicellular organisms appeared. 
@@ -173,6 +184,32 @@
                 Smaller mammals survived the impact and among those, apes gained abilities like upright standing and tool bearing. 
                 They are members of the class Homo, which evolved into the modern-day humans.
             </p>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/diagrams/seasons-on-earth.png" alt="Equinoxes, Solstices and Seasons" width="320" height="153">
+                    <p class="caption">Equinoxes, Solstices and Seasons</p>
+                </div>
+                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                <p class="paragraph">
+                    The rotation period relative to the sun is 24 h (solar day), but relative to other <a href="star.html">stars </a>is 23 hours, 56 minutes and 4 seconds (stellar day).
+                    It has been recorded that Earth's rotation is decelerating, although faster rotations were also reported.
+                </p>
+                <p class="paragraph">
+                    Earth is the third closest planet to the Sun at an average distance of 150 million km. 
+                    This length is used as a basis for the Astronomical Unit, or AU.
+                    Earth orbits around the Sun every 365.2564 solar days.
+                </p>
+                <p class="paragraph">
+                    The axial tilt of Earth is approximately 23.44°.
+                    Summer occurs after the Tropic of Cancer in the Northern Hemisphere or the Tropic of Capricorn in the Southern Hemisphere face the Sun.
+                    Winter occurs at the same time at the opposite hemisphere.
+                    These two positions of the Earth are calles solstices.
+                    Equinoxes occur twice a year, when the Equator faces the Sun.
+                    The axial tilt also creates two other circles - the Arctic and Antarctic circles.
+                    Lands within each of them see the Sun one half of the year and experience a polar night the other half.
+                    Earth reaches perihelion on 3 January and aphelion on 4 July.
+                </p>
+            </div>
             <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
             <h3 class="paragraphsubheader" id="Shape">Shape</h3>
             <p class="paragraph">
@@ -182,19 +219,25 @@
                 The lowest point is Challenger Deep - 10,925 m and the highest is mount Everest - 8,848 m. 
                 Due to Earth's rotation, the lands around the Equator are farther from the cener than the poles.
             </p>
-            <h3 class="paragraphsubheader" id="Surface">Surface</h3>
-            <p class="paragraph">
-                Most of the water on Earth is in it's liquid phase. 
-                About 71.8% of Earth's surface is covered by ocean. 
-                The world ocean is divided into five smaller oceans - Pacific, Atlantic, Indian, Southern and Arctic ocean.
-                These oceans contain a continential shelf, mid-ocean ridges, mountains, volcanoes, trenches, canyons and plateaus.
-            </p>
-            <p class="paragraph">
-                The land takes up only 29.2% of the surface. 
-                It consists of four main landmasses and many smaller islands.
-                The landmasses - Afroeurasia, America, Antarctica and Australia make up the continents.
-                Just like the oceans, many landforms shape up the land surface - mountains, plateaus, plains, volcanoes and many more.
-            </p>
+            <div class="articlediv">
+                <h3 class="paragraphsubheader" id="Surface">Surface</h3>
+                <p class="paragraph">
+                    Most of the water on Earth is in it's liquid phase. 
+                    About 71.8% of Earth's surface is covered by ocean. 
+                    The world ocean is divided into five smaller oceans - Pacific, Atlantic, Indian, Southern and Arctic ocean.
+                    These oceans contain a continential shelf, mid-ocean ridges, mountains, volcanoes, trenches, canyons and plateaus.
+                </p>
+                <p class="paragraph">
+                    The land takes up only 29.2% of the surface. 
+                    It consists of four main landmasses and many smaller islands.
+                    The landmasses - Afroeurasia, America, Antarctica and Australia make up the continents.
+                    Just like the oceans, many landforms shape up the land surface - mountains, plateaus, plains, volcanoes and many more.
+                </p>
+                <div class="captionbox center">
+                    <img class="articleimage" src="../assets/images/maps/earth-satellite-map.png" alt="Map of Earth" width="1024" height="512">
+                    <p class="caption">True color satellite map of Earth</p>
+                </div>
+            </div>
             <h3 class="paragraphsubheader" id="Interior">Interior</h3>
             <p class="paragraph">
                 The crust is the outermost geologic layer of Earth, separated from the mantle by the Mohorovičić discontinuity.
@@ -212,12 +255,75 @@
                 It is split into a liquid outer core and a solid inner core.
                 The core consists of iron and nickel and is responsible for the magnetosphere around Earth.
             </p>
-            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+            <div class="articlediv">
+                <div class="captionbox right" style="width:104px">
+                    <img class="articleimage" src="../assets/images/diagrams/atmosphere-layers.png" alt="Athmosphere layers" width="102" height="600">
+                    <p class="caption">Athmospheric layers of Earth</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
+                <p class="paragraph">
+                    The athmosphere of Earth is mostly made up of 78% nitrogen and 21% oxygen. 
+                    The remaining 1% consisting of other gases like water vapors, argon, carbon dioxide, neon, helium, methane and krypton.
+                    Carbon dioxide and other greenhouse gases like methane capture part of the energy from the Sun and warm the Earth. 
+                    Those gases increase every year due to human activity, resulting in rising average temperatures.
+                </p>
+                <p class="paragraph">
+                    The atmosphere is divided into five parts. 
+                </p>
+                <p class="paragraph">
+                    The lowest 6-20 km are the troposphere.
+                    It contains 3/4 of the total mass of the atmosphere. 
+                    This layer is where the air is flowing due to the rotational turbulence of Earth.
+                </p>
+                <p class="paragraph">
+                    The stratosphere is the next layer, lying at 20-50 km. 
+                    Hotter air is concentrated at higher altitudes and colder at lower ones.
+                    Commercial aircrafts fly at the lower end of the stratosphere to avoid turbulence in the troposphere.
+                </p>
+                <p class="paragraph">
+                    The mesosphere is located between 50-85 km. 
+                    Temperatures decrease as altitudes increase.
+                    This is where the lowest temperature in the atmosphere is.
+                </p>
+                <p class="paragraph">
+                    The thermosphere reaches altitudes of 690 km.
+                    As a part of the broader ionosphere, this layer is where air starts to get photoionised.
+                    Temperatures can get significantly lower than 0°C or as high as 2,500°C.
+                    The International Space Station orbits the Earth within the thermosphere.
+                </p>
+                <p class="paragraph">
+                    The exosphere is the last layer, which gradually thins out into the Earth's magnetosphere.
+                </p>
+                </div>
+            <h3 class="paragraphsubheader" id="Hydrosphere">Hydrosphere</h3>
             <p class="paragraph">
-                The rotation period relative to the sun is 24 h, but relative to other stars is 23 hours, 56 minutes and 4 seconds.
+                The hydrosphere consists of all the water on Earth.
+                Most of it is in a liquid state and is a part of the world ocean, but also rivers and lakes.
+                Oceans and some lakes contain saline water, whereas rivers and other lakes are fresh water.
+                Ice water is concentrated at the poles and high altitudes, forming glaciers.
             </p>
             <p class="paragraph">
-            </p>
+                The abundant water changes states and moves, a process known as the water cycle.
+                Water can evaporate, going into the atmosphere and forming clouds.
+                Vapors condenses and precipitates usually in the form of rain, snow, or hail.
+                The water can get into rivers, lakes, oceans, or into groundwater reservoirs, completing the cycle.
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="Moon" width="253" height="240">
+                    <p class="caption">The Moon</p>
+                </div>
+                <h2 class="paragraphheader" id="Moon">Moon</h2>
+                <p class="paragraph">
+                    The Moon is the only <a href="natural-satellite.html">natural satellite</a> orbiting Earth. 
+                    It is the fifth largest satellite in the Solar System and is the largest relative to it's parent planet. 
+                    The Moon has no magnetic field, a hydrosphere, or a significant athmosphere.
+                    The lunar gravitational attraction causes tides on Earth.
+                </p>
+                <p class="paragraph">
+                    It is also the only natural astronomic body other than Earth that has been visited by people during NASA's Appolo mission. 
+                    The Artemis mission is a follow-up to Appolo, with the uncrewed Artemis 1 already ongoing.
+                </p>
+            </div>
             
         </section>
 
