--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -138,7 +138,7 @@
             <h2 class="paragraphheader" id="SatellitesOfPlanets">Satellites of planets</h2>
             <div class="articlediv">
                 <div class="captionbox right">
-                    <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="The Moon" width="253" height="240">
+                    <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="Moon" width="253" height="240">
                     <p class="caption">The Moon</p>
                 </div>
                 <h3 class="paragraphsubheader" id="TheMoon">The Moon</h3>
